don't cut off tooltip dates, fixes #4103
this:
http://cl.ly/3X242l0v0L3D0d3n321I
instead of:
http://cl.ly/3N263M062O370z1b1x0M

Reviewed-on: https://gerrit.instructure.com/9874
Tested-by: Hudson <hudson@instructure.com>

--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -79,8 +79,8 @@
       padding-top: 6px
   .tooltip 
     .tooltip_wrap
-      left: -160px
-      width: 160px
+      left: -185px
+      width: 185px
       height: 70px
       top: 0
       font-size: 0.9em
